<resources>
    <!-- Find out which of these is still used -->
    <string name="app_name">TrainingTracker</string>
    <string name="nav_header_title">James Simpson</string>
    <string name="nav_header_subtitle">jsimp314159@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <!-- menu -->
    <string name="menu_home">Steps</string>
    <string name="menu_gallery">Running</string>
    <string name="menu_slideshow">Food Diary</string>
    <string name="menu_profile">Profile</string>
    <string name="action_changeUnits">Change Units</string>
    <string name="action_settings">Settings</string>
    <!-- steps -->
    <string name="steps_steps">Steps</string>
    <string name="goalCard_title_metric">Kilojoules Remaining</string>
    <string name="goalCard_title_imperial">Calories Remaining</string>
    <string name="goalCard_goal_title">target</string>
    <string name="goalCard_goal_value">0</string>
    <string name="goalCard_goal_minus">-</string>
    <string name="goalCard_food_title">Food</string>
    <string name="goalCard_food_value">0</string>
    <string name="goalCard_food_plus">+</string>
    <string name="goalCard_exercise_title">Exercise</string>
    <string name="goalCard_exercise_value">0</string>
    <string name="goalCard_exercise_equals">=</string>
    <string name="goalCard_remaining_title">Remaining</string>
    <string name="goalCard_remaining_value">0</string>
    <string name="stepEnergyExpenditureCard_title">Step Energy Used</string>
    <!-- profile -->
    <string name="profile_weight">Weight</string>
    <string name="profile_weight_metric_default">0.0kg</string>
    <string name="profile_weight_imperial_default">0.0lbs</string>
    <string name="profile_height">Height</string>
    <string name="profile_height_metric_default">0cm</string>
    <string name="profile_height_imperial_default">0.0ft</string>
    <string name="profile_bmr">BMR</string>
    <string name="profile_bmr_metric_default">0kj</string>
    <string name="profile_bmr_imperial_default">0kcal</string>
    <string name="profile_edit_button_description">Edit Weight/Height</string>
    <string name="profile_energyTarget">Target</string>
    <string name="profile_energyTarget_metric_default">0kj</string>
    <string name="profile_energyTarget_imperial_default">0kcal</string>


    <!-- general -->
    <string name="general_zero">0</string>
    <string name="general_space"> </string>
    <string name="units_kilojoules">kj</string>
    <string name="units_calories">kcal</string>
    <string name="units_centimetres">cm</string>
    <string name="units_feet">ft</string>
    <string name="units_kilograms">kg</string>
    <string name="units_pounds">lbs</string>
</resources>