<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/goalCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="4dp">
            <TextView
                android:id="@+id/goalCard_title_imperial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goalCard_title_imperial"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/goalCard_title_metric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goalCard_title_metric"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:visibility="visible"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginTop="40dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/goalCard_target_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/goalCard_goal_value"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/goalCard_goal_minus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/goalCard_goal_minus"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/goalCard_food_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/goalCard_food_value"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/goalCard_food_plus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/goalCard_food_plus"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/goalCard_exercise_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/goalCard_exercise_value"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/goalCard_exercise_equals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/goalCard_exercise_equals"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/goalCard_remaining_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/goalCard_remaining_value"
                    android:textAlignment="center" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginTop="60dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/goalCard_target_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/goalCard_goal_title"
                    android:textAlignment="center" />
                <TextView
                    android:id="@+id/goalCard_goal_empty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_weight="0.3"/>

                <TextView
                    android:id="@+id/goalCard_food_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/goalCard_food_title"
                    android:textAlignment="center" />
                <TextView
                    android:id="@+id/goalCard_food_empty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_weight="0.3"/>

                <TextView
                    android:id="@+id/goalCard_exercise_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/goalCard_exercise_title"
                    android:textAlignment="center" />
                <TextView
                    android:id="@+id/goalCard_exercise_empty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_weight="0.3"/>

                <TextView
                    android:id="@+id/goalCard_remaining_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/goalCard_remaining_title"
                    android:textAlignment="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/stepsCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/goalCard"
            android:layout_marginTop="10dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/steps_steps"
                    android:textColor="@color/black"
                    android:textSize="45sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3" />
                <TextView
                    android:id="@+id/tv_stepsTaken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/general_zero"
                    android:textColor="@color/black"
                    android:textSize="37sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.56" />
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/circle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/general_space"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/stepsCard"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="110dp">
            <TextView
                android:id="@+id/stepEnergyExpenditureCard_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stepEnergyExpenditureCard_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:visibility="visible"/>
            <TextView
                android:id="@+id/exerciseStepsImperial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:text="@string/general_zero"/>
            <TextView
                android:id="@+id/exerciseStepsMetric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:text="@string/general_zero"/>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</ScrollView>