<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment"
    android:padding="20dp">

    <TextView
        android:id="@+id/text_profile_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_weight"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_profile_height"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/text_profile_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_height"
        android:textAlignment="textStart"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toTopOf="@id/text_profile_weight"
        app:layout_constraintBottom_toTopOf="@id/text_profile_bmr"/>

    <TextView
        android:id="@+id/text_profile_bmr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_bmr"
        android:textAlignment="textStart"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toTopOf="@id/text_profile_height"
        app:layout_constraintBottom_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>